# ON-DEM-WG3-FileFormat

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  base_types.py  bodies.py  body.py  body.txt  boundary.py  imposed_conditions.py  interaction.py  interaction.txt  materials.py  model.py  model.txt  requirements-docs.txt  scene.py
.github/workflows/: build.yml  docker.yml  gitlab-status.yml  sync-to-gitlab.yml
implementation/: README.md
implementation/hdf5/: benchmark.cpp  test.cpp  test.py
implementation/hdf5/sources/: CMakeLists.txt  convert_restart.cpp  fake_DEM_generator.cpp  fake_DEM_generator.h  open_file_format.h  py_bindings.cpp  read_restart.cpp  read_restart.h  read_restart_hdf5.cpp  read_restart_hdf5.h  read_restart_vtkhdf.cpp  read_restart_vtkhdf.h  save_restart.cpp  save_restart.h  save_restart_hdf5.cpp  save_restart_hdf5.h  save_restart_vtkhdf.cpp  save_restart_vtkhdf.h  structs.cpp  structs.h  tools.cpp  tools.h  wrappers.h
implementation/vtkhdf/: codegen_yade.py  export_yade_vtkhdf.py  export_yade_vtkhdf_generated.py  hdf5_utils.py  import_yade_vtkhdf.py  schema_parser.py  test_5spheres.vtkhdf  test_export.py  yade_mapping.json
implementation/vtkhdf/documentation/: ONDEM_framework_beamer.tex  ONDEM_framework_guide.tex  ondem_pipeline_long.tex  ondem_pipeline_short.tex
implementation/vtkhdf/testing/: export_yade_vtkhdf_generated.py  test_5spheres.vtkhdf  test_box_spheres.vtkhdf  test_export.py
sphinx/: Makefile  basic_types.rst  bibliography.rst  bodies.rst  bodies_full.rst  body.py  body.rst  body_full.rst  conf.py  genPythonClass.py  imposed_conditions.rst  index.rst  interaction.py  interaction.rst  interaction_full.rst  materials.rst  materials_full.rst  model.py  model.rst  model.txt  references.bib  scene.rst  setSphinxDocstrings.py  vector3.py
sphinx/_static/: custom.css
